# mini-transcript-search

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: auto_publish.yml  test.yml
notebooks/: infer.ipynb
src/mini_transcript_search/: __init__.py  __main__.py  inference.py  search.py
tests/: test_meta.py  test_mini_transcript_search.py
