[tool.poetry]
name = "mini-transcript-search"
version = "0.1.0"
description = "Experiment in low dependency vector search"
authors = ["mySociety <alex.parsons@mysociety.org>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mysociety/mini-transcript-search"
repository = "https://github.com/mysociety/mini-transcript-search"
include = [
    "LICENSE.md",
]

[tool.poetry_bumpversion.file."src/mini_transcript_search/__init__.py"]

[tool.poetry.scripts]
transcript-search = "mini_transcript_search.__main__:app"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
mysoc-validator = "^0.3.0"
fastembed = "^0.3.6"
numpy = "1.26.4"
pandas = "^2.2.2"
requests = "^2.32.3"
pyarrow = "^17.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"
pyright = "^1.1"
toml = "^0.10.2"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"